# SuperGameEngine

./: .gitignore  CMakeLists.txt  Copy-Release.bat  Copy-Tools.bat  Licence.md  README.md
FatedQuest.Libraries.CSharp/StandardOperations/: CMakeLists.txt
FatedQuest.Libraries.CSharp/StandardOperations/FileHandling/: FilePaths.cs
FatedQuest.Libraries/BinaryOperations/: BinaryOperations.vcxproj  BinaryOperations.vcxproj.filters  CMakeLists.txt  packages.config
FatedQuest.Libraries/BinaryOperations/BinaryZip/: BinaryZip.h  StandardBinaryZip.cpp  StandardBinaryZip.h  ZipCreateOpenOption.h  ZipCreateOpenOption.superenum
FatedQuest.Libraries/GamePackage/: AllReferences.h  CMakeLists.txt  FatedQuestReferences.h  GamePackage.cpp  GamePackage.vcxproj  GamePackage.vcxproj.filters  packages.config
FatedQuest.Libraries/GamePackage/GamePackage/: CombinedGamePackage.cpp  CombinedGamePackage.h  GamePackage.h  GamePackageFileSystem.cpp  GamePackageFileSystem.h  GamePackageFileSystemDirectory.cpp  GamePackageFileSystemDirectory.h  GamePackageFileSystemFile.cpp  PackageFile.h  PackageFileArchived.cpp  PackageFileArchived.h  PackageFileOrigin.h  PackageFileOrigin.superenum  PackageFilePathing.cpp  PackageFilePathing.h  PackageFileStorageType.h  PackageFileStorageType.superenum  PackageFileSystem.h  PackageFileSystemDirectory.h  PackageFileSystemFile.h  PackageFileUnarchived.cpp  PackageFileUnarchived.h  PackageFiles.h  PackagePaths.h  SGEPackagePaths.cpp  SGEPackagePaths.h
FatedQuest.Libraries/Logger/: AllReferences.h  CMakeLists.txt  FatedQuestReferences.h  Logger.vcxproj  Logger.vcxproj.filters
FatedQuest.Libraries/Logger/Console/: ConsoleLog.cpp  ConsoleLog.h
FatedQuest.Libraries/Logger/Logger/: Log.cpp  Log.h  LogEventArguments.cpp  LogEventArguments.h  LogLevel.h  LogLevel.superenum
FatedQuest.Libraries/StandardObjects/: AllReferences.h  CMakeLists.txt  StandardObjects.cpp  StandardObjects.vcxproj  StandardObjects.vcxproj.filters
FatedQuest.Libraries/StandardObjects/DataCoupling/: KeyPairValue.h
FatedQuest.Libraries/StandardObjects/Events/: FEvent.cpp  FEvent.h  FEventAction.h  FEventArguments.h  FEventObserver.h  FEventSubscriptions.h
FatedQuest.Libraries/StandardObjects/Position/: FPoint.cpp  FPoint.h  FVector2D.cpp  FVector2D.h  FVector2F.cpp  FVector2F.h  FVector2I.cpp  FVector2I.h  FVector2Int.cpp  FVector2Int.h  FVector3D.cpp  FVector3D.h  FVector3F.cpp  FVector3F.h  FVector3I.cpp  FVector3I.h  FVector4D.cpp  FVector4D.h  FVector4F.cpp  FVector4F.h  FVector4I.cpp  FVector4I.h
FatedQuest.Libraries/StandardObjects/Structural/: Concepts.h  (+1 more)
FatedQuest.Libraries/StandardObjectsTests/: CMakeLists.txt  StandardObjectsTests.vcxproj  StandardObjectsTests.vcxproj.filters
FatedQuest.Libraries/XmlDocument/: AllReferences.h  CMakeLists.txt  FatedQuestLibraries.h  RapidXML.h  RapidXMLAttribute.cpp  RapidXMLAttribute.h  RapidXMLDocument.cpp  RapidXMLDocument.h  RapidXMLNode.cpp  RapidXMLNode.h  XMLAttribute.cpp  XMLAttribute.h  XMLNode.cpp  XMLNode.h  XmlDocument.vcxproj  XmlDocument.vcxproj.filters
FatedQuest.Libraries/XmlDocumentTests/: CMakeLists.txt  RapidXMLDocumentTests.cpp  RapidXMLNodeTests.cpp  XmlDocumentTests.vcxproj
SuperGameEngine/: CMakeLists.txt  Generate-Tools-With-Tests.bat  Generate-Tools.bat  Generate-With-Tests.bat  Generate.bat  Regenerate.lnk  SuperGameEngine.sln  SuperGameEngine.sln.DotSettings
SuperGameEngine/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  FatedQuestReferences.h
SuperGameEngine/EngineEntry/: EngineEntry.rc  EngineEntry.vcxproj  EngineEntry.vcxproj.filters  RemoveWarnings.h  main.cpp  packages.config
SuperGameEngine/EngineTests/: CMakeLists.txt  EngineTests.vcxproj  EngineTests.vcxproj.filters
SuperGameEngine/FileHandling/: File.h
SuperGameEngine/Input/: CMakeLists.txt  FatedQuestLibraries.h  Input.cpp  Input.vcxproj  Input.vcxproj.filters  packages.config
SuperGameEngine/InputTests/: CMakeLists.txt  InputTests.vcxproj  InputTests.vcxproj.filters  packages.config  pch.h  test.cpp
SuperGameEngine/Logging/: Logger.cpp
SuperGameEngine/MathHelpers/: MathHelpers.cpp  MathHelpers.vcxproj.filters
SuperGameEngine/PackageFileProvider/: ActiveDiskFileHandler.cpp  ActiveDiskFileHandler.h  ArchiveFileHandler.cpp  ArchiveFileHandler.h  DiskFileHandler.cpp  DiskFileHandler.h  FileHandler.h  FilepathCollection.cpp  FilepathCollection.h  FilepathCollectionFromExternalSource.cpp  FilepathCollectionFromExternalSource.h  GamePackage.cpp  GamePackage.h  LibraryIncludes.h  PackageFileProvider.vcxproj  PackageFileProvider.vcxproj.filters  PreloadedDiskFileHandler.cpp  PreloadedDiskFileHandler.h
SuperGameEngine/PackageFileProviderTests/: ActiveDiskFileHandlerTests.hpp  FilepathCollectionTests.hpp  PackageFileProviderTests.vcxproj  PackageFileProviderTests.vcxproj.filters  test.cpp
SuperGameEngine/SuperGameEngine/: CMakeLists.txt  FatedQuestReferences.h  LibraryIncludes.h  RapidXML.h  Resource.h  SuperGameEngine.cpp  SuperGameEngine.rc  SuperGameEngine.vcxproj  SuperGameEngine.vcxproj.filters  imgui.ini  main.cpp  packages.config
SuperGameEngine/SuperGameEngineTests/: LibraryIncludes.h  SuperGameEngineTests.vcxproj  SuperGameEngineTests.vcxproj.filters  packages.config
SuperGameEngine/SuperGameEngineTools/: Components.cpp  SuperGameEngineTools.vcxproj  SuperGameEngineTools.vcxproj.filters
SuperGameEngine/TestLibrary/: Test.h  TestLibrary.cpp  TestLibrary.vcxproj  TestLibrary.vcxproj.filters
SuperGameEngine/Tools/: CMakeLists.txt  EngineBasicsIncludes.h  FatedQuestLibraries.h  ImGuiIncludes.h  Tools.cpp  Tools.vcxproj  Tools.vcxproj.filters
SuperGameEngine/ToolsTests/: CMakeLists.txt  ToolsTests.vcxproj  ToolsTests.vcxproj.filters  test.cpp
SuperGameEngine/XmlDocumentTests/: XmlDocumentTests.vcxproj
Tools/DocumentationSiteGenerator/: CMakeLists.txt  Generate-With-Tests.bat  Generate.bat
Tools/FatedLauncher/: .gitignore  BuildAndDeploy.bat  CMakeLists.txt  FatedLauncher.sln  Generate.bat  Warning.txt
Tools/ProductsPackager/: CMakeLists.txt  Generate-With-Tests.bat  Generate.bat  ProductsPackager.sln
(+1133 files in other folders)
